# mpu6050-with-servor-motor

./: .gitignore  CMakeLists.txt  Makefile  README.md  pin_map.txt
hal/: CMakeLists.txt
hal/device/: CMakeLists.txt
hal/device/include/: linux_device.hpp  linux_device_access.hpp  linux_device_exception.hpp
hal/device/src/: linux_device.cpp  linux_device_access.cpp  linux_device_exception.cpp
hal/gpio/: CMakeLists.txt
hal/gpio/include/: digital_input.hpp  digital_output.hpp  gpio_component.hpp
hal/gpio/src/: digital_input.cpp  digital_output.cpp  gpio_component.cpp
hal/i2c/: CMakeLists.txt
hal/i2c/include/: i2c_component.hpp  i2c_peripheral.hpp  i2c_peripheral_exception.hpp
hal/i2c/src/: i2c_component.cpp  i2c_peripheral.cpp  i2c_peripheral_exception.cpp
hal/pwm/: CMakeLists.txt
hal/pwm/include/: pwm_component.hpp  pwm_info.hpp
hal/pwm/src/: pwm_component.cpp  pwm_info.cpp
inc/: BBB_I2C.hpp  MPU6050.hpp  accelerometer.hpp  common.hpp  gpio.hpp  i2c.hpp  powerglove.hpp  pwm.hpp  roboticarm.hpp  servo.hpp
main/: CMakeLists.txt
main/src/: main.cpp
misc/: Makefile  roboticarm.service
module/: CMakeLists.txt
module/accelerometer/: CMakeLists.txt
module/accelerometer/include/: accelerometer.hpp  accelerometer_exception.hpp  accelerometer_tilt_angle.hpp
module/accelerometer/src/: accelerometer.cpp  accelerometer_exception.cpp  accelerometer_tilt_angle.cpp
module/button/: CMakeLists.txt
module/button/include/: button.hpp
module/button/src/: button.cpp
module/led/: CMakeLists.txt
module/led/include/: led.hpp
module/led/src/: led.cpp
module/motor/: CMakeLists.txt
module/motor/include/: servo_motor.hpp
module/motor/src/: servo_motor.cpp
module/robotic_arm/: CMakeLists.txt
module/robotic_arm/include/: roboticarm.hpp
module/roboticarm/: CMakeLists.txt
module/roboticarm/include/: roboticarm.hpp
module/roboticarm/src/: roboticarm.cpp
src/: BBB_I2C.cpp  MPU6050.cpp  accelerometer.cpp  common.cpp  gpio.cpp  i2c.cpp  main.cpp  pwm.c  pwm.cpp  pwm.h  pwm.hpp  roboticarm.cpp  servo.cpp
test/: CMakeLists.txt
test/src/: gpio_test.cpp  i2c_test.cpp  pwm_test.cpp
tools/: format.txt
tools/crosscompiler/: arm-linux-gnueabihf-g++  arm-linux-gnueabihf-gcc
utils/: CMakeLists.txt
utils/common/: CMakeLists.txt
utils/common/include/: common.hpp
utils/common/src/: common.cpp
utils/logger/: CMakeLists.txt
utils/logger/include/: logger.hpp
